# openapi_yaml.yaml
@@ -227,6 +227,9 @@ paths:
                   section_id:
                     type: integer
                     example: 1
+                  quantity_available:
+                    type: integer
+                    example: 1
         '500':
           description: Internal server error
         '404':
@@ -269,6 +272,9 @@ paths:
                   type: integer
                   # format : date
                   example: 1
+                quantity_available:
+                  type: integer
+                  example: 1
       responses:
         '200':
           description: Successfully updated
@@ -299,6 +305,9 @@ paths:
                     # format : date
                     example: 2023-06-26
                   section_id:
+                    type: integer
+                    example: 1
+                  quantity_available:
                     type: integer
                     example: 1
         '404':
@@ -376,6 +385,10 @@ paths:
                     section_id:
                       type: integer
                       example: 1
+                    quantity_available:
+                      type: integer
+                      example: 1
+                      
     post:
       description: Operation to create the product resource
       requestBody:
@@ -405,6 +418,9 @@ paths:
                 section_id:
                   type: integer
                   example: 1
+                quantity_available:
+                  type: integer
+                  example: 100
                 
       responses:
         '201':
@@ -439,6 +455,9 @@ paths:
                   section_id:
                     type: integer
                     example: 1
+                  quantity_available:
+                    type: integer
+                    example: 100
         '409':
           description: product already exist
         '500':
